src/routes/blog/layout.scss
@use "src/styles/abstracts/mixins";

article {
  width: 100%;
  max-width: calc(var(--glyph-cell-width) * var(--article-glyph-columns));
  font-size: 1.125rem;
  line-height: 1.45;
  padding: 0 0 var(--glyph-space-y);

  .article-cover-glyph-raster {
    --article-media-glyph-rows: 30;

    position: relative;
    height: calc(var(--glyph-cell-height) * var(--article-media-glyph-rows));
    margin: var(--glyph-space-y) 0;
    background: transparent;
    overflow: hidden;

    > .glyph-raster-region,
    figure:first-of-type {
      position: absolute;
      inset: 0;
      z-index: 1;
      margin: 0;

      picture,
      img {
        width: 100%;
        height: 100%;
        display: block;
        object-fit: cover;
        opacity: 0;
      }
    }
  }

  .article-image-glyph-raster {
    --article-media-glyph-rows: 36;

    position: relative;
    height: calc(var(--glyph-cell-height) * var(--article-media-glyph-rows));
    margin: var(--glyph-space-y) 0;
    background: transparent;
    overflow: hidden;

    > .glyph-raster-region,
    figure {
      position: absolute;
      inset: 0;
      width: 100%;
      height: 100%;
      margin: 0;
    }
  }

  img {
    display: block; // Removes any extra white space below the image.
    width: 100%;
    max-width: 100%;
    height: auto; // Let the browser calculate the height to maintain aspect ratio.
  }

  figure {
    margin-inline: 0;

    &:first-of-type {
      aspect-ratio: 16 / 9;
      overflow: hidden;

      picture {
        display: block;
        height: 100%;
      }

      img {
        height: 100%;
        object-fit: cover;
      }
    }

    > figcaption {
      margin-top: var(--glyph-space-y);
      text-align: center;
      font-size: 1rem;
      opacity: 0.6;
    }
  }

  h2 {
    margin: calc(var(--glyph-space-y) * 5) auto 0 auto;

    + p:first-letter {
      font-size: 160%;
      line-height: 1;
      margin-right: calc(var(--glyph-space-x) * 0.25);
    }

    &#contents {
      margin-top: calc(var(--glyph-space-y) * 5);
      cursor: unset;

      + p {
        text-align: center;
        margin: var(--glyph-space-y) 0 0 0;
        font-weight: 400;
        font-style: italic;

        &:first-letter {
          font-size: unset;
          line-height: unset;
          margin-right: unset;
        }

        + ul {
          margin: calc(var(--glyph-space-y) * 2) auto calc(var(--glyph-space-y) * 5) auto;

          li {
            text-align: start;
          }

          a {
            color: inherit;
          }
        }
      }
    }
  }

  h3 {
    margin: calc(var(--glyph-space-y) * 3) auto var(--glyph-space-y) 0;
    text-align: left;
  }

  h2,
  h3 {
    cursor: pointer;
    width: max-content;
    max-width: 100%;

    > a {
      color: inherit;
    }
  }

  time[role="doc-subtitle"] {
    p {
      margin: var(--glyph-space-y) auto calc(var(--glyph-space-y) * 5) auto;
      max-width: calc(var(--glyph-cell-width) * var(--text-narrow-glyph-columns));
      line-height: 1.1;
      text-align: center;
      font-size: 1.25rem;
      font-style: italic;
    }
  }

  p {
    @include mixins.justify-text;
  }

  .article-code-drawer {
    width: 100%;
    margin: var(--glyph-space-y) 0;
    border: 1px solid rgb(212 212 212 / 16%);
    background-color: var(--code-background-color);

    > summary {
      display: flex;
      align-items: center;
      justify-content: space-between;
      gap: calc(var(--glyph-space-x) * 2);
      padding: var(--glyph-space-y) calc(var(--glyph-space-x) * 2);
      cursor: pointer;
      font-size: 0.875rem;
      line-height: 1.5;
      font-family: Menlo, Monaco, Consolas, "Andale Mono", "Ubuntu Mono", "Courier New", monospace;
      color: #d4d4d4;
      list-style: none;
      user-select: none;

      &::-webkit-details-marker {
        display: none;
      }

      &::after {
        content: "";
        width: var(--glyph-cell-width);
        height: calc(var(--glyph-cell-height) * 0.5);
        border: solid currentColor;
        border-width: 0 1px 1px 0;
        transform: rotate(45deg);
      }
    }

    &[open] > summary {
      border-bottom: 1px solid rgb(212 212 212 / 16%);

      &::after {
        transform: rotate(-135deg);
      }
    }

    > pre,
    > .article-code-drawer-content > pre {
      width: 100%;
      overflow-x: scroll;
      padding: var(--glyph-space-y) calc(var(--glyph-space-x) * 2);
      margin: 0;
      background-color: var(--code-background-color);
    }
  }

  > pre {
    width: 100%;
    overflow-x: scroll;
    padding: var(--glyph-space-y) calc(var(--glyph-space-x) * 2);
    margin: var(--glyph-space-y) 0;
    background-color: var(--code-background-color);
  }

  *:not(pre) {
    > code {
      padding: calc(var(--glyph-space-y) * 0.25) calc(var(--glyph-space-x) * 0.5);
      color: var(--inline-code-text-color);
      font-weight: 400;
      border: 1px solid var(--inline-code-border-color);
      background-color: var(--inline-code-background-color);
    }
  }

  ul {
    li {
      @include mixins.justify-text;
    }
  }
}

